@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-23T16:12:55Z",
-  "count_outdated" : 199,
-  "uniques_outdated" : 10,
-  "count" : 385,
+  "timestamp" : "2022-05-24T00:52:00Z",
+  "count_outdated" : 227,
+  "uniques_outdated" : 11,
+  "count" : 390,
   "uniques" : 19,
   "views" : [
-    {
-      "timestamp": "2022-05-09T00:00:00Z",
-      "count": 23,
-      "count_minmax": [ 23, 28 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-11T00:00:00Z",
       "count": 60,
