@@ -1,12 +1,7 @@
 {
-  "count": 186,
+  "count": 163,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-05-09T00:00:00Z",
-      "count": 23,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-11T00:00:00Z",
       "count": 60,
