@@ -1,3 +1,10 @@
+2022-05-24T00:52:00Z:
+* notice: last 14d: unq all: 1 163
+* notice: prev accum: outdated-unq outdated-all / unq all: 10 199 / 19 385
+* notice: next accum: outdated-unq outdated-all / unq all: 11 227 / 19 390
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: changed dates: []
+
 2022-05-23T16:12:55Z:
 * notice: last 14d: unq all: 1 186
 * notice: prev accum: outdated-unq outdated-all / unq all: 10 199 / 19 390
